# finding-the-mole

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: branch-naming-rules.yml  cd.yml  ci-main.yml  ci.yml  python-app.yml  quality-checks.yml  test.yml  unit-and-doc-tests.yml  validate-codecov-config.yml
data/: README.md  WIDM - 2024.csv  belgium2024.csv  data2022.csv  data2022.xlsx
finding_the_mole/baseline_model/: README.md  entrypoint_inference.py  entrypoint_training.py  model.py
finding_the_mole/bayesian_model/: README.md
finding_the_mole/conf/: inference_config.yaml  training_config.yaml
finding_the_mole/shared/: abstract_entrypoint_inference.py  abstract_entrypoint_training.py  abstract_model.py  data_extraction.py  data_preprocessing.py
finding_the_mole/utils/: assertions.py
output/2024/: results.md
output/belgium/2024/: results.md
tests/: dummy_test.py
tests/unit/: data_extraction_test.py
tests/unit/baseline_model/: model_test.py
tests/unit/shared/: abstract_model_test.py  data_extraction_test.py  data_preprocessing_test.py
tests/unit/utils/: assertions_test.py
tests/utils/: io_utils.py
