[tool.poetry]
name = "finding-the-mole"
version = "0.1.0"
description = ""
authors = ["Mike Weltevrede <46759318+mikeweltevrede@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pre-commit = "^3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
