[tool.poetry]
name = "finding-the-mole"
version = "0.1.0"
description = ""
authors = ["Mike Weltevrede <46759318+mikeweltevrede@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.4"
isort = "^5.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "D",  # pydocstyle
    "I",  # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
